publish: adding rotating tiles for skills, and fixed bug where mt description  overflowed container
generated from commit 073f82baefcd004a54d533bde508800f70e3db71

--- a/css/app.css
+++ b/css/app.css
@@ -6122,6 +6122,11 @@ header {
   margin-bottom: 8px;
   margin-right: 5px; }
 
+#mail-logo {
+  height: 15px;
+  margin-bottom: 8px;
+  margin-right: 10px; }
+
 .glyphicon-envelope {
   margin-right: 10px; }
 
